# tendermule

./: .vimspector.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  words-adj.txt  words-nouns.txt
.github/workflows/: audit.yaml  ci.yaml
hooks/: pre-commit
src/: lib.rs  main.rs  replay.rs
src/words/: adjs.rs  mod.rs  nouns.rs
supply-chain/: config.toml
tests/: cli_tests.rs  lib_tests.rs
