[package]
name = "tendermule"
version = "0.3.2"
edition = "2024"
repository = "https://github.com/stvsmth/tendermule"
description = "Generate a possibly amusing random identifier"
license-file = "LICENSE"
default-run = "tendermule"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[dependencies]
anyhow = "1.0"
clap-num = "1.0"
clap = { version = "4.2", features = ["derive", "env"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bin]]
name = "replay"
path = "src/replay.rs"

[[bin]]
name = "tendermule"
path = "src/main.rs"
