[package]
name = "tendermule"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/stvsmth/tendermule"
description = "Generate a possibly amusing random identifier"
license-file = "LICENSE"
default-run = "tendermule"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap-num", "dep:serde", "dep:serde_json"]

[dependencies]
anyhow = "1.0"
rand = "0.10"
clap = { version = "4.2", features = ["derive", "env"], optional = true }
clap-num = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[[bin]]
name = "replay"
path = "src/replay.rs"
required-features = ["cli"]

[[bin]]
name = "tendermule"
path = "src/main.rs"
required-features = ["cli"]
